tdf#120906 - Option to use Header/Footer not working correctly

Now with storage capabilities too

Change-Id: Iaf9050b38ce356d80c26f339caf61267c1fb3c3b